# image-compare

./: .env.template  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  Trunk.toml  bacon.toml  compose.yaml  index.html  package-lock.json  package.json  pnpm-lock.yaml  styles.css  tailwind.config.js
.github/workflows/: deploy.yml  test.yml
.nginx/templates/: server.conf.template
.tls/: README.md  generate.sh  openssl.cnf
src/: dom.rs  lib.rs  main.rs  tests_setup.rs  wasmjs.rs  yew_tester.rs
src/assets/: check_badge.rs  exclamation_triangle.rs  mod.rs  question_mark_circle.rs  x_mark.rs
src/components/: mod.rs  modal.rs
src/markdown/: disclaimer-EN.md  how_to_participate-EN.md
src/markdown/EN/: about_the_project.md  change_user_content.md  confirm_reset_user_button.md  fatal_error_message.md  finish_comparing_button.md  how_to_participate.md  same_or_different_prompt.md  thanks_for_comparing.md  which_is_best_prompt.md
src/markdown/FI/: about_the_project.md  cancel_action_button.md  change_user_button.md  change_user_content.md  close_modal_button_sr.md  confirm_reset_user_button.md  disclaimer.md  fatal_error_message.md  finish_comparing_button.md  how_to_participate.md  instructions_button_sr.md  same_or_different_prompt.md  thanks_for_comparing.md  which_is_best_prompt.md
src/pages/: compare.rs  mod.rs  welcome.rs
src/pages/compare/: header.rs  image.rs  mod.rs
src/pages/equal_or_different/: change_user_modal.rs  finish_comparing_modal.rs  image_list.rs  instructions_modal.rs  mod.rs  prompt.rs
src/pages/images_to_compare/: change_user_modal.rs  dot_button.rs  finish_comparing_modal.rs  header.rs  image_list.rs  instructions_card.rs  instructions_modal.rs  mod.rs  prompt.rs  question_mark.rs
src/request/: images.rs  images_to_compare.rs  mod.rs  user.rs
src/routes/: mod.rs  routes.rs
src/shared_components/: button.rs  fatal_error_modal.rs  footer.rs  language_button.rs  loading.rs  mod.rs  modal.rs
src/static/: index.html  styles.css
static/: styles.css
tailwind-src/: styles.css
