[package]
name = "image-compare"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
web-sys = { version = "0.3.60", features = ["HtmlDocument", "Element", "DomTokenList", "Document", "HtmlCollection", "Window", "Navigator"] }
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.34"
serde = "1"
chrono = { version = "0.4.23", features = ["serde"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
