[package]
name = "image-compare"
authors = ["Lílian Ferreira de Freitas <lily.mosquitoes@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
web-sys = { version = "0.3.60", features = [
  "HtmlDocument",
  "Element",
  "Document",
  "HtmlCollection",
  "Window",
  "Navigator"
] }
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.34"
serde = "1"
chrono = { version = "0.4.23", features = ["serde"] }
markdown = "1.0.0-alpha.7"
include_dir = "0.7.3"
lazy_static = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
rand = "0.8.5"
getrandom = { version = "0.2.8", features = ["js"] }
serde_json = "1"
html-escape = "0.2.13"
