[package]
name = "image-compare"
authors = ["Lílian Ferreira de Freitas <lily.mosquitoes@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
web-sys = { version = "0.3", features = [
  "HtmlDocument",
  "Element",
  "Document",
  "HtmlCollection",
  "Window",
  "Navigator"
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = "1"
chrono = { version = "0.4", features = ["serde"] }
markdown = "1.0.0-alpha.17"
include_dir = "0.7"
lazy_static = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1"
html-escape = "0.2"
